<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityOtp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="270dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toTopOf="@+id/phone_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_phone_no"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />


    <Button
        android:id="@+id/generate_otp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/generate_otp"
        app:layout_constraintBottom_toTopOf="@+id/otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_no" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="30dp"
        android:layout_height="25dp"
        app:layout_constraintTop_toTopOf="@+id/generate_otp"
        app:layout_constraintLeft_toLeftOf="@+id/generate_otp"
        app:layout_constraintRight_toRightOf="@+id/generate_otp"
        app:layout_constraintBottom_toBottomOf="@+id/generate_otp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/otp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_otp"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generate_otp" />

    <Button
        android:id="@+id/verify_otp"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/verify_otp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otp" />

    <TextView
        android:id="@+id/back_to_login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/back_to_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_otp" />


</androidx.constraintlayout.widget.ConstraintLayout>